- Enh #1860: Changed the signature of CValidator::createValidator() to make it easier to use (Qiang)
- Enh #1849: Updated Blueprint CSS to version 1.0 (sebas)
- Enh #1872: Added $defaultUrl parameter to CWebUser::getReturnUrl() (Qiang)
- Enh #1885: Added ipFilters to the Gii-created config file to reduce user confusion (Sam Dark, Steve Friedl)
- Enh #1899: Added checkIntegrity and resetSequence for SQL Server (Qiang)
- Enh #1929: Improved CActiveForm so that it can be used multiple times on the same page for the same type of data model (Qiang)
- Enh #1931: CDbConnection.tablePrefix can now use an empty string as table prefix (Qiang)
- Enh: CDbConnection::quoteColumnName and quoteTableName will properly quote table prefix and schema prefix. (Qiang)
- Enh: Added CConsoleCommand::init() (Qiang)
- Enh: Improved the exception display with source code for each call stack (Sam Dark, Qiang)
- Enh: Improved the error display in console command mode (Qiang)
- Enh: Added support for using anonymous parameters and global options in console commands (Qiang)
- Enh: Added message translations in Czech and Croatia (Qiang)
- Enh: Enhanced CFileLogRoute to process the logs faster (Y!!)
- Enh: Improved IDE code completion for Yii::app()-> (Sam Dark)
- Enh: CSort now supports relation.field notation to sort grids by related model fields (Sam Dark, denis909)
- Chg #1914: Composite foreign keys should be separated by commas in CActiveRecord::relations() (Qiang)
- New #1191: Implemented the database migration feature (Qiang)
- New: Added query builder (Qiang)


Version 1.1.5 November 14, 2010
-------------------------------
- Bug #997: Fixed the bug that relational AR query with page-by and sorting may fail to work for SQL Server (Qiang)
- Bug #1130: Fixed the bug when renderDynamic and beginCache was used together without page caching (mdomba)
- Bug #1244: Fixed the bug that CDbCommandBuilder::createCountCommand may generate invalid SQL when having and/or group options are used (Qiang)