@@ -25,6 +25,7 @@ Version 1.1.6 to be released
 - Enh #1849: Updated Blueprint CSS to version 1.0 (sebas)
 - Enh #1872: Added $defaultUrl parameter to CWebUser::getReturnUrl() (Qiang)
 - Enh #1885: Added ipFilters to the Gii-created config file to reduce user confusion (Sam Dark, Steve Friedl)
+- Enh #1895: Added CDbDataReader implements Countable interface (mdomba)
 - Enh #1899: Added checkIntegrity and resetSequence for SQL Server (Qiang)
 - Enh #1929: Improved CActiveForm so that it can be used multiple times on the same page for the same type of data model (Qiang)
 - Enh #1931: CDbConnection.tablePrefix can now use an empty string as table prefix (Qiang)
